<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_interface.group_activities.ManageGroupsActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/create_group_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_group"/>

        <Button
            android:id="@+id/leave_group_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_leave_group"/>

        <Button
            android:id="@+id/add_monitored_to_group_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_monitored_user_to_group"/>

        <Button
            android:id="@+id/join_group_by_map_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_group_by_map_button" />

        <Button
            android:id="@+id/my_group_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_groups_I_lead" />

        <Button
            android:id="@+id/joined_groups_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_groups_I_Am_In" />


    </LinearLayout>

</RelativeLayout>